# marketing_dash

./: Dockerfile  README.md  app.py  deploy.sh  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
data/: data_generator.py
